src/main/metadata-excluded/objects/TestEpAdapterObject1__c.object
<CustomObject>
    <description>Object required for tests of epAdapter.</description>
    <fields>
        <fullName>BooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Test field for boolean values</description>
        <label>BooleanField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>The EP transaction that created this object.</description>
        <inlineHelpText>The EP transaction that created this object.</inlineHelpText>
        <label>Created By EP Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateField__c</fullName>
        <description>Test field for date values</description>
        <label>DateField</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTimeField__c</fullName>
        <description>Test field for date time values</description>
        <label>DateTimeField</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalSystem1Id__c</fullName>
        <description>Reference to objects in ExternalSystem1</description>
        <externalId>true</externalId>
        <label>ExternalSystem1Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IntegerField__c</fullName>
        <description>Test field for Integer datatype</description>
        <label>IntegerField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <description>List of EP transactions that updated this object</description>
        <inlineHelpText>List of EP transactions that updated this object</inlineHelpText>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TestEpAdapterObject1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <label>TestEpAdapterObject1-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestEpAdapterObject1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>